primeiro commit da capa INORGAME

--- a/index.html
+++ b/index.html
@@ -9,10 +9,11 @@
 <body>
     <!-- Navegação -->
     <nav class="navbar">
-        <img src="./assets/logo clara (2).png" alt="Logo Inorga" class="logo">
-        <img src="./assets/image 34.png" alt="Logo átomo" class="logo">
+        <div class="logo-container">
+            <img src="logo1.png" alt="Logo Inorga" class="logo">
+            <img src="logo2.png" alt="Logo átomo" class="logo-atom">
+        </div>
     </nav>
-
     <!-- Conteúdo principal -->
     <main>
         <img src="./assets/pergunta 2.png" alt="">
