Popup de regras, tem que mudar a cor do background

--- a/index.html
+++ b/index.html
@@ -10,13 +10,13 @@
     <!-- Navegação -->
     <nav class="navbar">
         <div class="logo-container">
-            <img src="logo1.png" alt="Logo Inorga" class="logo">
-            <img src="logo2.png" alt="Logo átomo" class="logo-atom">
+            <img src="./assets/logo clara (2).png" alt="Logo Inorga" class="logo">
+            <img src="./assets/Logotipo de marca de beleza sustentável lúdico em verde claro e rosa (1).png" alt="Logo átomo" class="logo-atom">
         </div>
     </nav>
     <!-- Conteúdo principal -->
     <main>
-        <img src="./assets/pergunta 2.png" alt="">
+        <img src="./assets/pergunta 2 (1).png" alt="" class="ino">
 
         <button class="btn-jogar">
             Jogar <span class="icon">➜</span>
